feat: create shared_kanidm_client crate with official Kanidm endpoints
- Implemented OAuth2 Authorization Code Flow with PKCE (S256)
- JWT validation with JWKS from Kanidm
- Multi-tenant group extraction from Kanidm groups
- All endpoints verified against official Kanidm documentation (Context7)
- 6/6 unit tests passing

Official Kanidm endpoints:
- Authorization: /oauth2/authorise
- Token: /oauth2/token
- JWKS: /oauth2/openid/{client_id}/public_key.jwk
- UserInfo: /oauth2/openid/{client_id}/userinfo
- Discovery: /.well-known/openid-configuration

Dependencies: oauth2, reqwest, jsonwebtoken, tokio, serde

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ members = [
   "shared/config",
   "shared/types",
   "shared/db",
-  "shared/auth"
+  "shared/auth",
+  "shared/kanidm_client"
 ]
 resolver = "2"
 
@@ -46,6 +47,7 @@ shared_db = {path = "shared/db"}
 # Shared crates (internal)
 shared_error = {path = "shared/error"}
 shared_jwt = {path = "shared/jwt"}
+shared_kanidm_client = {path = "shared/kanidm_client"}
 shared_types = {path = "shared/types"}
 # SQLx - database
 sqlx = {version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono"]}
