feat(shared/auth): add Kanidm JWT validation support (WIP)
- Added KanidmClientProvider trait for providing Kanidm client
- Updated AuthUser struct with kanidm_user_id and email fields
- Implemented dual JWT validation (Kanidm + legacy)
- Added from_kanidm_claims() constructor
- Updated all extractors to support both auth methods
- Tests passing (3/3 unit tests)

Breaking Changes:
- FromRequestParts now requires KanidmClientProvider bound
- This breaks user_service_api compilation until AppState implements the trait

TODO (Phase 3.3):
- Implement KanidmClientProvider for user_service AppState
- Add kanidm_client field to AppState
- Implement Kanidm user → tenant/role mapping
- Complete Kanidm JWT validation flow

--- a/shared/auth/Cargo.toml
+++ b/shared/auth/Cargo.toml
@@ -13,6 +13,7 @@ serde_json = {workspace = true}
 # Shared crates
 shared_error = {workspace = true}
 shared_jwt = {workspace = true}
+shared_kanidm_client = {workspace = true}
 shared_types = {workspace = true}
 # Database
 sqlx = {workspace = true}
