feat(user_service): implement OAuth2 handlers for Kanidm authentication
Phase 3.4: OAuth2 Endpoints Implementation

Created:
- oauth_handlers.rs: OAuth2 authorization flow handlers
  * oauth_authorize: Generate authorization URL with PKCE
  * oauth_callback: Exchange code for tokens, validate JWT
  * oauth_refresh: Refresh access token
- kanidm_dto.rs: OAuth2 DTOs (authorize, callback, refresh)

Updated:
- lib.rs: Added OAuth2 routes to router
- openapi.rs: Added oauth tag (schemas pending feature flag)
- Cargo.toml: Enabled openapi feature for user_service_core

Status:
- ✅ All 3 OAuth2 endpoints working
- ✅ PKCE S256 challenge implemented
- ✅ JWT validation with Kanidm claims
- ⚠️ Tenant mapping not implemented (returns None)
- 📝 OpenAPI schemas commented out (pending ToSchema derives)

Next: Phase 3.5 - Tenant/role mapping from Kanidm groups

--- a/services/user_service/api/Cargo.toml
+++ b/services/user_service/api/Cargo.toml
@@ -25,7 +25,7 @@ tower-http = {workspace = true}
 tracing = {workspace = true}
 tracing-subscriber = {workspace = true}
 # Internal crates
-user_service_core = {workspace = true}
+user_service_core = {workspace = true, features = ["openapi"]}
 user_service_infra = {workspace = true}
 utoipa = {workspace = true}
 utoipa-swagger-ui = {workspace = true}
