--- a/services/user_service/core/Cargo.toml
+++ b/services/user_service/core/Cargo.toml
@@ -35,3 +35,6 @@ name = "user_service_core"
 authors.workspace = true
 edition.workspace = true
 version.workspace = true
+
+[features]
+openapi = []
