--- a/services/user_service/api/Cargo.toml
+++ b/services/user_service/api/Cargo.toml
@@ -16,7 +16,7 @@ shared_config = {workspace = true}
 shared_db = {workspace = true}
 shared_error = {workspace = true}
 shared_kanidm_client = {workspace = true}
-sqlx = {workspace = true, features = ["postgres", "runtime-tokio-rustls", "macros"]}
+sqlx = {workspace = true, features = ["postgres", "runtime-tokio-rustls", "macros", "bigdecimal"]}
 # Async runtime
 tokio = {workspace = true}
 tower = {workspace = true}
