--- a/infra/docker_compose/kanidm-server.toml
+++ b/infra/docker_compose/kanidm-server.toml
@@ -3,30 +3,15 @@
 
 # Server Bind Address
 bindaddress = "[::]:8300"
+# Database path
 db_path = "/data/kanidm.db"
-# Database Configuration (SQLite for dev, PostgreSQL for prod)
-db_type = "sqlite"
 # Domain and Origin
 domain = "localhost"
 # Logging
 log_level = "info"
-origin = "http://localhost:8300"
+origin = "https://localhost:8300"
 # Role settings
 role = "WriteReplica"
-# Trust the X-Forwarded-For header (only for dev behind reverse proxy)
-trust_x_forward_for = false
-
-# OAuth2 Settings
-[oauth2]
-refresh_token_expiry = 2592000  # 30 days
-# Token expiration (in seconds)
-token_expiry = 3600  # 1 hour
-
-# SMTP Settings (for password reset emails)
-# [smtp]
-# from = "noreply@example.com"
-# server = "smtp.example.com"
-# port = 587
-# starttls = true
-# username = "smtp_user"
-# password = "smtp_password"
+# TLS certificates (generate self-signed for dev)
+tls_chain = "/data/chain.pem"
+tls_key = "/data/key.pem"
