--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,51 @@ RATE_LIMIT_WINDOW_SECONDS=60
 # Feature Flags (optional)
 ENABLE_SWAGGER=true
 ENABLE_METRICS=false
+
+# Kanidm OAuth2 Configuration
+KANIDM_URL=https://your-kanidm-domain.com
+KANIDM_CLIENT_ID=anthill
+KANIDM_CLIENT_SECRET=your-oauth2-client-secret-change-this-in-production
+KANIDM_REDIRECT_URL=https://your-app-domain.com/api/v1/auth/oauth/callback
+
+# Redis Configuration (for caching and sessions)
+REDIS_URL=redis://localhost:6379
+
+# NATS Configuration (for event streaming)
+NATS_URL=nats://localhost:4222
+
+# MinIO Configuration (for file storage)
+MINIO_ENDPOINT=http://localhost:9000
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+MINIO_BUCKET_NAME=anthill-files
+
+# SSL/TLS Configuration
+SSL_CERT_PATH=/path/to/ssl/cert.pem
+SSL_KEY_PATH=/path/to/ssl/private.key
+
+# Monitoring Configuration
+METRICS_PORT=9090
+HEALTH_CHECK_PORT=8080
+
+# Email Configuration (for notifications)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=your-email@gmail.com
+SMTP_PASSWORD=your-app-password
+SMTP_FROM_EMAIL=noreply@your-domain.com
+
+# Feature Flags
+ENABLE_OAUTH2=true
+ENABLE_EMAIL_NOTIFICATIONS=false
+ENABLE_FILE_UPLOAD=true
+
+# Database Connection Pool
+DB_MAX_CONNECTIONS=10
+DB_MIN_CONNECTIONS=2
+DB_CONNECT_TIMEOUT=30
+DB_IDLE_TIMEOUT=300
+
+# Cache Configuration
+CACHE_TTL=3600
+SESSION_TTL=604800
