--- a/.env.production
+++ b/.env.production
@@ -51,7 +51,7 @@ MINIO_ACCESS_KEY=CHANGE_THIS_ACCESS_KEY
 MINIO_SECRET_KEY=CHANGE_THIS_SECRET_KEY
 MINIO_BUCKET_NAME=anthill-production-files
 
-# SSL/TLS Configuration
+# SSL/TLS Configuration (for Nginx, not application services)
 SSL_CERT_PATH=/etc/ssl/certs/anthill.crt
 SSL_KEY_PATH=/etc/ssl/private/anthill.key
 
