--- a/infra/nginx/conf.d/api-gateway.conf
+++ b/infra/nginx/conf.d/api-gateway.conf
@@ -1,6 +1,12 @@
 # API Gateway Routing Rules
 # Routes requests to appropriate microservices based on path patterns
 
+# Map for environment-based routing
+map $http_x_environment $docs_allowed {
+    development 1;
+    default 0;
+}
+
 # Rate limiting for API endpoints
 limit_req zone=api burst=20 nodelay;
 
@@ -136,7 +142,7 @@ location ~ ^/api/v1/files {
 # Swagger UI (Development only)
 location /docs {
     # Only allow in development
-    if ($http_x_environment != "development") {
+    if ($docs_allowed = 0) {
         return 404;
     }
 
