--- a/services/user_service/infra/Cargo.toml
+++ b/services/user_service/infra/Cargo.toml
@@ -7,6 +7,7 @@ sha2 = {workspace = true}
 shared_db = {workspace = true}
 shared_error = {workspace = true}
 shared_jwt = {workspace = true}
+shared_kanidm_client = {workspace = true}
 # External deps
 sqlx = {workspace = true}
 tracing = {workspace = true}
