fix: address all CodeRabbit review comments
- Fix password length inconsistency: align login/register to 8+ chars
- Fix password strength levels: correct 'Good' level mapping
- Remove duplicate type definitions: import from types/index.ts
- Remove hardcoded encryption key: use simple localStorage + error handling
- Remove unused dead code: clean up decryptFunc and imports
- Fix  usage: use .by() in login/register pages
- Fix misleading test name in validation.spec.ts
- Improve E2E test reliability: relative URLs, deterministic waits
- Fix weak assertion: add password confirmation error display
- Remove duplicate redirect logic in root page
- Remove development artifact file test-validation.js
- Update package.json scripts to use bun instead of npm

All critical and major issues resolved. Tests passing with bun.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
 		"lint:fix": "prettier --write . && eslint . --fix",
 		"validate-svelte": "echo '✅ Remember to use Svelte 5 runes! Check .svelte-instructions.md'",
 		"test:unit": "vitest",
-		"test": "npm run test:unit -- --run && npm run test:e2e",
+		"test": "bun run test:unit -- --run && bun run test:e2e",
 		"test:e2e": "playwright test"
 	},
 	"devDependencies": {
