--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -4,6 +4,7 @@ VITE_API_BASE_URL=http://localhost:3000/api/v1
 # Development settings
 VITE_APP_ENV=development
 
-# Optional: Kanidm configuration (for future OAuth integration)
-# VITE_KANIDM_CLIENT_ID=your-client-id
-# VITE_KANIDM_ISSUER_URL=https://idm.example.com
+# Kanidm OAuth2 Configuration
+VITE_KANIDM_CLIENT_ID=anthill-frontend
+VITE_KANIDM_ISSUER_URL=https://idm.example.com
+VITE_KANIDM_REDIRECT_URI=http://localhost:5173/api/v1/auth/oauth/callback
