ci: add frontend ignore patterns to codecov.yml
- Ignore node_modules, .svelte-kit, coverage, test files, and e2e tests

--- a/codecov.yml
+++ b/codecov.yml
@@ -85,6 +85,14 @@ ignore:
   - "target/**"
   - "**/main.rs" # Main files usually don't need coverage
 
+  # Frontend ignore patterns
+  - "frontend/node_modules/**"
+  - "frontend/.svelte-kit/**"
+  - "frontend/coverage/**"
+  - "frontend/**/*.test.*"
+  - "frontend/**/*.spec.*"
+  - "frontend/e2e/**"
+
 # GitHub integration
 github_checks:
   annotations: true
