fix: resolve Codecov PR review issues
- Fix YAML syntax error (duplicate if condition and invalid HTML tag)
- Fix frontend coverage file path for Codecov upload
- Add text and html reporters to vitest for better local development

--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -222,8 +222,7 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          directory: ./frontend
-          files: ./coverage/lcov.info
+          files: ./frontend/coverage/lcov.info
           flags: frontend
           name: frontend-coverage
 
@@ -232,7 +231,6 @@ jobs:
     name: Coverage Summary
     needs: [coverage, coverage-user-service, coverage-inventory-service, coverage-frontend]
     runs-on: ubuntu-latest
-    if: always()</parameter>
     if: always()
 
     steps:
