Fix environment variables to use PUBLIC_ prefix and remove default fallbacks
- Change all env vars from VITE_ to PUBLIC_ prefix for SvelteKit compatibility
- Remove default fallbacks from server-side env usage for stricter configuration
- Update .env.example to match PUBLIC_ naming convention
- All builds pass successfully

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,10 +1,10 @@
 # API Configuration
-VITE_API_BASE_URL=http://localhost:3000/api/v1
+PUBLIC_API_BASE_URL=http://localhost:3000/api/v1
 
 # Development settings
-VITE_APP_ENV=development
+PUBLIC_APP_ENV=development
 
 # Kanidm OAuth2 Configuration
-VITE_KANIDM_CLIENT_ID=anthill-frontend
-VITE_KANIDM_ISSUER_URL=https://idm.example.com
-VITE_KANIDM_REDIRECT_URI=http://localhost:5173/api/v1/auth/oauth/callback
+PUBLIC_KANIDM_CLIENT_ID=anthill-frontend
+PUBLIC_KANIDM_ISSUER_URL=https://idm.example.com
+PUBLIC_KANIDM_REDIRECT_URI=http://localhost:5173/api/v1/auth/oauth/callback
