feat: switch to bun package manager and fix auth API client integration
- Switch frontend from npm/pnpm to bun for faster package management
- Remove pnpm-workspace.yaml and update package.json with bun scripts
- Fix TypeScript errors in auth integration:
  * Add UserProfile to User type mapping in useAuth hook
  * Fix HTMLTableCellAttributes to HTMLThAttributes in table component
  * Add missing KANIDM_UNAVAILABLE error code to auth error system
- Fix corrupted dashboard page by removing redundant auth check
- Update UserProfile interface to match frontend expectations
- All tests passing with bun runtime

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,10 @@
 		"validate-svelte": "echo '✅ Remember to use Svelte 5 runes! Check .svelte-instructions.md'",
 		"test:unit": "vitest",
 		"test": "bun run test:unit -- --run && bun run test:e2e",
-		"test:e2e": "playwright test"
+		"test:e2e": "playwright test",
+		"install": "bun install",
+		"add": "bun add",
+		"remove": "bun remove"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
