fix(inventory): correct directory structure for 3-crate pattern [TaskID: 04.01.05]
- ERROR: Created services/inventory_service_new/ instead of using existing services/inventory_service/
- FIXED: Moved core crate to services/inventory_service/core/
- Created services/inventory_service/api/ and services/inventory_service/infra/ crates
- Updated workspace Cargo.toml to include inventory service crates
- Removed incorrect services/inventory_service_new/ directory
- Added basic module structure and placeholder implementations
- Fixed compilation errors (unused imports, missing files)

Related: task_04.01.05_create_product_categories_api.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ members = [
   "services/user_service/api",
   "services/user_service/core",
   "services/user_service/infra",
+  "services/inventory_service/api",
+  "services/inventory_service/core",
+  "services/inventory_service/infra",
   # Shared libraries
   "shared/error",
   "shared/jwt",
@@ -63,6 +66,9 @@ tracing-subscriber = {version = "0.3", features = ["env-filter", "json"]}
 # User service crates (internal)
 user_service_core = {path = "services/user_service/core"}
 user_service_infra = {path = "services/user_service/infra"}
+# Inventory service crates (internal)
+inventory_service_core = {path = "services/inventory_service/core"}
+inventory_service_infra = {path = "services/inventory_service/infra"}
 # OpenAPI documentation
 utoipa = {version = "5", features = ["axum_extras", "uuid", "chrono"]}
 utoipa-swagger-ui = {version = "9", features = ["axum"]}
