feat(cors): implement configurable CORS with production validation
- Replace frontend_url with CORS_ORIGINS env var supporting comma-separated origins
- Add production validation to prevent insecure CORS configuration
- Update user_service and inventory_service to use new CORS config
- Allow all origins in development, require specific origins in production
- Fix clippy warnings: unused variables and collapsible if statements

--- a/services/inventory_service/infra/Cargo.toml
+++ b/services/inventory_service/infra/Cargo.toml
@@ -7,10 +7,14 @@ inventory_service_core = {workspace = true}
 # Shared crates
 shared_db = {workspace = true}
 shared_error = {workspace = true}
+# Slug generation
+slug = "0.1"
 # Database
 sqlx = {workspace = true, features = ["postgres", "runtime-tokio-rustls", "macros", "bigdecimal"]}
 # Other
 uuid = {workspace = true}
+# Validation
+validator = {workspace = true}
 
 [dev-dependencies]
 # Test dependencies
