feat(inventory_service): fix PR issues - test imports, docstrings, code duplication
- Add missing test imports (serde_json, uuid::Uuid) to fix compilation
- Add serde_json to dev-dependencies for test serialization
- Enhance API handler docstrings with detailed parameter descriptions, examples, and HTTP responses
- Refactor bulk operations to reduce code duplication using generic helper method
- Improve docstring coverage for category management endpoints

TaskID: 04.01.05
Related: task_04.01.05_create_product_categories_api.md

--- a/services/inventory_service/infra/Cargo.toml
+++ b/services/inventory_service/infra/Cargo.toml
@@ -21,6 +21,8 @@ validator = {workspace = true}
 fake = {workspace = true}
 mockall = {workspace = true}
 proptest = {workspace = true}
+serde_json = {workspace = true}
+tokio = {workspace = true}
 tokio-test = "0.4"
 
 [lib]
