fix(inventory_service): resolve warehouse hierarchy API compilation errors [TaskID: 04.02.01]
- Add missing utoipa::ToSchema derives to warehouse request DTOs
- Clean up unused imports and warnings across inventory service
- Fix RequirePermission extractor by removing incorrect trait bounds
- Add casbin_middleware to router for authorization support
- Update task status to NeedsReview

Related: task_04.02.01_create_warehouse_hierarchy_api.md

--- a/services/inventory_service/infra/Cargo.toml
+++ b/services/inventory_service/infra/Cargo.toml
@@ -4,6 +4,8 @@ async-trait = {workspace = true}
 chrono = {workspace = true}
 # Internal crates
 inventory_service_core = {workspace = true}
+# JSON serialization
+serde_json = {workspace = true}
 # Shared crates
 shared_db = {workspace = true}
 shared_error = {workspace = true}
@@ -21,7 +23,6 @@ validator = {workspace = true}
 fake = {workspace = true}
 mockall = {workspace = true}
 proptest = {workspace = true}
-serde_json = {workspace = true}
 tokio = {workspace = true}
 tokio-test = "0.4"
 
