--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
 		"@tailwindcss/vite": "^4.1.14",
 		"@types/node": "^22",
 		"@vitest/browser": "^3.2.4",
+		"@vitest/coverage-v8": "^3.2.4",
 		"bits-ui": "^2.11.0",
 		"clsx": "^2.1.1",
 		"eslint": "^9.38.0",
