--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -76,14 +76,21 @@ jobs:
           cargo install sqlx-cli \
             --no-default-features \
             --features postgres \
-            --version 0.8.2 \
+            --version 0.8.6 \
             || echo "sqlx-cli already installed"
 
       - name: Wait for PostgreSQL
         run: |
+          TIMEOUT=60
+          ELAPSED=0
           until pg_isready -h localhost -p 5432 -U postgres; do
+            if [ $ELAPSED -ge $TIMEOUT ]; then
+              echo "PostgreSQL failed to become ready within ${TIMEOUT}s"
+              exit 1
+            fi
             echo "Waiting for PostgreSQL..."
             sleep 2
+            ELAPSED=$((ELAPSED + 2))
           done
 
       - name: Setup test database
@@ -189,7 +196,7 @@ jobs:
           cargo install sqlx-cli \
             --no-default-features \
             --features postgres \
-            --version 0.8.2 \
+            --version 0.8.6 \
             || echo "sqlx-cli already installed"
 
       - name: Wait for PostgreSQL
@@ -278,7 +285,7 @@ jobs:
           cargo install sqlx-cli \
             --no-default-features \
             --features postgres \
-            --version 0.8.2 \
+            --version 0.8.6 \
             || echo "sqlx-cli already installed"
 
       - name: Setup test database
@@ -363,7 +370,7 @@ jobs:
           cargo install sqlx-cli \
             --no-default-features \
             --features postgres \
-            --version 0.8.2 \
+            --version 0.8.6 \
             || echo "sqlx-cli already installed"
 
       - name: Setup test database
