fix: resolve receipt service compilation issues and PR review fixes
- Remove non-existent OutboxRepository and StockMoveRepository imports
- Add sha2 dependency for idempotency key generation
- Fix unused tenant_id parameter in validate_receipt_request
- Update task status to NeedsReview after PR fixes

TaskID: 04.04.05

--- a/services/inventory_service/infra/Cargo.toml
+++ b/services/inventory_service/infra/Cargo.toml
@@ -17,6 +17,8 @@ sqlx = {workspace = true, features = ["postgres", "runtime-tokio-rustls", "macro
 uuid = {workspace = true}
 # Validation
 validator = {workspace = true}
+# Hashing for idempotency keys
+sha2 = "0.10"
 
 [dev-dependencies]
 # Test dependencies
