feat: implement DO creation from order endpoint [TaskID: 04.04.07]
- Created shared/events crate with NATS client and OrderConfirmed event
- Added DeliveryOrder and DeliveryOrderItem models to inventory_service_core
- Implemented repository traits and PostgreSQL implementations
- Added NATS consumer in inventory_service/api for order.confirmed events
- Integrated event consumers initialization in main.rs
- Added NATS_URL to shared_config
- Updated task file to Done status

Related: task_04.04.07_create_do_from_order_endpoint.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ members = [
   "shared/types",
   "shared/db",
   "shared/auth",
-  "shared/kanidm_client"
+  "shared/kanidm_client",
+  "shared/events"
 ]
 resolver = "2"
 
@@ -52,6 +53,7 @@ shared_config = {path = "shared/config"}
 shared_db = {path = "shared/db"}
 # Shared crates (internal)
 shared_error = {path = "shared/error"}
+shared_events = {path = "shared/events"}
 shared_jwt = {path = "shared/jwt"}
 shared_kanidm_client = {path = "shared/kanidm_client"}
 shared_types = {path = "shared/types"}
