feat: implement Display, FromStr, and sqlx::Type for DeliveryOrderStatus [TaskID: 04.04.07]

--- a/services/inventory_service/core/Cargo.toml
+++ b/services/inventory_service/core/Cargo.toml
@@ -12,6 +12,8 @@ shared_error = {workspace = true}
 utoipa = {workspace = true, optional = true}
 # UUID
 uuid = {workspace = true}
+# Database
+sqlx = {workspace = true}
 # Validation
 validator = {workspace = true}
 
