fix(inventory_service): compilation fixes and OpenAPI schema support
- Add ToSchema derives to transfer DTOs and domain entities for OpenAPI docs
- Fix MinIO image tag in docker-compose.yml
- Clean up unused imports and variables across handlers
- Update Cargo.toml dependencies for async-nats and futures
- Fix NATS consumer message deserialization and repository wiring
- Consolidate AppState for consistent trait implementations
- Add missing transfer DTOs and domain models
- Add clippy allow annotations for manual div_ceil calculations

[TaskID: 04.04.16]

--- a/services/inventory_service/api/Cargo.toml
+++ b/services/inventory_service/api/Cargo.toml
@@ -3,11 +3,15 @@ name = "inventory-service"
 path = "src/main.rs"
 
 [dependencies]
+# NATS messaging
+async-nats = "0.35"
 # Async traits
 async-trait = {workspace = true}
 # Axum & web
 axum = {workspace = true}
 chrono = {workspace = true}
+# Futures
+futures = {workspace = true}
 # Internal crates
 inventory_service_core = {workspace = true, features = ["openapi"]}
 inventory_service_infra = {workspace = true}
