--- a/infra/docker_compose/docker-compose.yml
+++ b/infra/docker_compose/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   postgres:
@@ -9,7 +9,7 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: inventory_db
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -45,7 +45,7 @@ services:
       retries: 5
 
   minio:
-    image: minio/minio:RELEASE.2025-01-07T18-02-08Z
+    image: minio/minio:latest
     container_name: minio_storage
     # ⚠️ Development-only credentials - DO NOT use in production
     # For production: use .env file or secure secret injection
@@ -65,7 +65,7 @@ services:
       timeout: 5s
       retries: 5
   minio-init:
-    image: minio/mc:RELEASE.2025-01-07T18-02-08Z
+    image: minio/mc:latest
     container_name: minio_init
     depends_on:
       minio:
