--- a/services/user_service/api/Cargo.toml
+++ b/services/user_service/api/Cargo.toml
@@ -44,7 +44,7 @@ mockall = {workspace = true}
 proptest = {workspace = true}
 regex = "1.10"
 shared_jwt = {workspace = true}
-sqlx = {workspace = true, features = ["postgres", "runtime-tokio-rustls", "macros"]}
+sqlx = {workspace = true, features = ["postgres", "runtime-tokio-rustls"]}
 tokio-test = "0.4"
 # Test dependencies
 tower = {workspace = true}
